[tool.poetry]
name = "dubai-space-travel"
version = "0.1.0"
description = "Dubai to the Stars - The Ultimate Space Travel Experience"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "dubai_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
pandas = "^2.1.0"
pillow = "^10.0.0"
plotly = "^5.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"